Sun Jul 18 03:19:14 2004  Akinori MUSHA  <knu@iDaemons.org>

	* dir.c (bracket): use NULL instead of 0.

Sun Jul 18 02:35:30 2004  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/net/imap.rb (receive_responses): return if a LOGOUT response
	received.

Sat Jul 17 23:59:01 2004  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/net/imap.rb (send_string_data): wait command continuation
	requests before sending octet data of literals.

Sat Jul 17 23:54:59 2004  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/tk/variable.rb: TkVariable#ref returns a TkVariable object

Sat Jul 17 22:04:44  akira yamada  <akira@ruby-lang.org>

	* lib/uri/ldap.rb: method hierarchical? should be in URI::LDAP.

Sat Jul 17 18:29:07 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (stmt): not to show same error messages twice.

Sat Jul 17 14:18:11 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* string.c (rb_str_match_m): String#match should also take
	  optional argument.  [ruby-core:03205]

	* re.c (rb_reg_match_m): add optional second argugment "pos" to
	  specify match start point.  [ruby-core:03203]

Sat Jul 17 13:13:32 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* lib/irb/ruby-lex.rb (RubyLex::identify_string): %s string do not
	  process expression interpolation.  [ruby-talk:106691]

Sat Jul 17 05:26:27 2004  Dave Thomas  <dave@pragprog.com>

	* lib/rdoc/diagram.rb: Incorporate Micheal Neumann's
	  client-side imagemao patch

Sat Jul 17 01:57:03 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (THREAD_ALLOC): th->thread should be initialized to NULL.
	  [ruby-talk:106657]  The solution was found by Guy Decoux.

Fri Jul 16 22:30:28 2004  Michael Neumann  <mneumann@ntecs.de>

	* file.c (rb_stat_dev_major): new methods File::Stat#dev_major and
	  #dev_minor. [ruby-core:03195]

Fri Jul 16 11:17:38 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* error.c (exit_initialize): use EXIT_SUCCESS instead of 0.
	  [ruby-dev:23913]
